add demo for rabbit

--- a/demo-rabbit/src/main/resources/application.properties
+++ b/demo-rabbit/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:7450/demo_graph
 spring.datasource.username=demo
 spring.datasource.password=123456
+demo.queue=demo-queue
+demo.exchange.queue=demo-exchange-queue
+demo.fanout=demo-fanout
+demo.exchange.fanout=demo-exchange-fanout
+demo.rpc=demo-rpc
+demo.exchange.rpc=demo-exchange-rpc
+
+#------ Rabbitmq Properties-------------
+spring.rabbitmq.host = localhost
+spring.rabbitmq.port = 5670
+spring.rabbitmq.username = rabbitmq
+spring.rabbitmq.password = rabbitmq
