rabbit mq demo is ready

--- a/demo-rabbit/src/main/resources/application.properties
+++ b/demo-rabbit/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.username=demo
 spring.datasource.password=123456
 demo.queue=demo-queue
 demo.exchange.queue=demo-exchange-queue
-demo.fanout=demo-fanout
+demo.fanout.one=demo-fanout-one
+demo.fanout.two=demo-fanout-two
 demo.exchange.fanout=demo-exchange-fanout
 demo.rpc=demo-rpc
 demo.exchange.rpc=demo-exchange-rpc
@@ -13,3 +14,5 @@ spring.rabbitmq.host = localhost
 spring.rabbitmq.port = 5670
 spring.rabbitmq.username = rabbitmq
 spring.rabbitmq.password = rabbitmq
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
