fix demo rabbit

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ postgresUrl=jdbc:postgresql://localhost:7450/demo_graph?currentSchema=graph
 postgresUser=demo
 postgresPassword=123456
 postgresDriverVersion=42.6.0
+kotlinVersion=1.7.0
