--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 kotlin.code.style=official
 arcadeDbVersion=22.12.1
+kotlinVersion=1.7.20
 testContainersVersion=1.17.6
 postgresUrl=jdbc:postgresql://localhost:7450/demo_graph?currentSchema=graph
 postgresUser=demo
 postgresPassword=123456
 postgresDriverVersion=42.6.0
-kotlinVersion=1.7.0
+springframeworkBootVersion=2.7.3
+springDependencyManagementVersion=1.0.13.RELEASE
