--- a/demo-rabbit/src/main/resources/application.properties
+++ b/demo-rabbit/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.rabbitmq.username = rabbitmq
 spring.rabbitmq.password = rabbitmq
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
+logging.level.root=trace
